*deluge-1.3.11 (01 Dec 2014)

  01 Dec 2014; Poncho <poncho@spahan.ch> +deluge-1.3.11.ebuild,
  -deluge-1.3.10.ebuild:
  net-p2p/deluge: version bump

*deluge-1.3.10 (21 Oct 2014)

  21 Oct 2014; Poncho <poncho@spahan.ch> +deluge-1.3.10.ebuild,
  -deluge-1.3.9.ebuild:
  net-p2p/deluge: version bump

*deluge-1.3.9 (06 Oct 2014)

  06 Oct 2014; Poncho <poncho@spahan.ch> +deluge-1.3.9.ebuild,
  -deluge-1.3.8.ebuild:
  net-p2p/deluge: version bump

*deluge-1.3.8 (04 Oct 2014)

  04 Oct 2014; Poncho <poncho@spahan.ch> +deluge-1.3.8.ebuild,
  -deluge-1.3.7.ebuild:
  net-p2p/deluge: version bump

*deluge-1.3.7 (31 Aug 2014)

  31 Aug 2014; Poncho <poncho@spahan.ch> +deluge-1.3.7.ebuild:
  net-p2p/deluge: add stable version

  13 Jul 2014; Poncho <poncho@spahan.ch> deluge-9999.ebuild:
  net-p2p/deluge: overwrite _distutils-r1_create_setup_cfg

  12 Jul 2014; Poncho <poncho@spahan.ch> deluge-9999.ebuild:
  net-p2p/deluge: use distutils-r1_python_{prepare,install}_all

  11 May 2014; Poncho <poncho@spahan.ch> +metadata.xml,
  -files/fix-seeing-double-torrents.patch, deluge-9999.ebuild:
  net-p2p/deluge: switch to develop branch