@@ -1,1 +1,1 @@
-DIST deluge-1.3.11.tar.bz2 1792459 SHA256 83e1f41b8a2a6e7ba86a54474692d4686db509b75441173d9603447f9e0ec898 SHA512 d56c03f3c687cdee65f8d7f26728a46cae1fd665c49313bd2b91243d26df0f5b2292048fd542333cbc538383eb53cd961bc3427230f9081317268735df367272 WHIRLPOOL 52820837a24ef3d4917a1b018fa30c8ec662a6c2366cb848fb984b716175bad63131e7cc4eea7688405e380102cf0ebb5ae4b58dcd7c90fd7dde9dcc9dada444
+DIST deluge-1.3.12.tar.bz2 1772567 SHA256 565745b2a3f0567fc007dbdfeea2aa96a6bebd7dbdda2ec932a3017c66613c93 SHA512 bcb909f70d407ec766a609a1525f48b0f0ce18217049ff05dfd03b3681bdc021a446afa265b288181c644b1e47c710f41d17b1244c3b991818b947a51b97eb74 WHIRLPOOL 683e6d197ee617646ffc716738c58f479df5dc05cfc20d8295c283f9b98da309490ec582becf0d584c28a957d8bcbf1dc7b9ab4b06879d1fd338bc88a0bda29b
