@@ -1,3 +1,9 @@
+*deluge-1.3.12 (14 Sep 2015)
+
+  14 Sep 2015; Poncho <poncho@spahan.ch> +deluge-1.3.12.ebuild,
+  -deluge-1.3.11.ebuild, deluge-9999.ebuild:
+  net-p2p/deluge: version bump
+
 *deluge-1.3.11 (01 Dec 2014)
 
   01 Dec 2014; Poncho <poncho@spahan.ch> +deluge-1.3.11.ebuild,
